// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph> renders Paragraph 1`] = `
<p
  className="Van-Paragraph"
>
  My Paragraph
</p>
`;

exports[`<Paragraph> renders with specific attributes 1`] = `
<p
  className="Van-Paragraph"
  data-id="0"
>
  My Paragraph
</p>
`;

exports[`<Paragraph> renders with specific className 1`] = `
<p
  className="Van-Paragraph my-class"
>
  My Paragraph
</p>
`;
